--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>Ausgaben</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <base href="/">
 </head>
 <body>
 <div id="root"></div>
