--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
     <meta name="msapplication-wide310x150logo" content="%PUBLIC_URL%/favicon/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="%PUBLIC_URL%/favicon/mstile-310x310.png" />
     <title>Ausgaben</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
