--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://rsms.me/inter/inter-ui.css"
-    integrity="sha512-MjQ3N2ViOTRmMDM3OGRjNTJhNzRkMjk2ZTcyODM1OTUwMzlhYTYzMTRlZGQzZTE3ZTVlMGZiYjExMjM1OGRmYjgyNzk2MWE5Y2MyYzRhYjBkOTRmMjBhMTgyYmNlZmJiYjI3MjgyMTEyMzQyOTM0YWEzOWFmMDk1OTYzMGFhYTEK"
-    crossorigin="" />
+    integrity="sha256-cdb8LF5k6q+Mbl8Od9ARdnDUCjihJZocnLNXYUFtMmg=" crossorigin="" />
 </head>
 
 <body>
