fix: update dependencies
Fixes #28
Fixes #30
Fixes #31

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,9 @@
   <meta name="msapplication-wide310x150logo" content="%PUBLIC_URL%/favicon/mstile-310x150.png" />
   <meta name="msapplication-square310x310logo" content="%PUBLIC_URL%/favicon/mstile-310x310.png" />
   <title>Ausgaben</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://rsms.me/inter/inter-ui.css"
-    integrity="sha256-cdb8LF5k6q+Mbl8Od9ARdnDUCjihJZocnLNXYUFtMmg=" crossorigin="" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://rsms.me/inter/inter-ui.css" crossorigin="" />
 </head>
 
 <body>
